# rust-function-template

./: .funcignore  .gitignore  Cargo.toml  LICENSE  README.md  host.json
.cargo/: config.toml
src/: main.rs
